# SCAF

./: .gitignore  CMakeLists.txt  LICENSE.TXT  Makefile  README.md
include/: Assumptions.h  DGBase.h  PDG.h
include/AnalysisUtilities/: InsertPrintf.h  InstInsertPt.h  ModuleLoops.h  PDGQueries.h  ReachabilityUtil.h
include/MemoryAnalysisModules/: .ControlSpecIterators.h.swp  .ControlSpeculation.h.swp  .LoopAA.h.swo  .LoopAA.h.swp  .PureFunAA.h.swp  .ReductionDetection.h.swp  CallsiteDepthCombinator.h  CallsiteSearch.h  ClassicLoopAA.h  Devirtualize.h  Introspection.h  KillFlow.h  QueryCacheing.h  SVFResults.h  TypeSanity.h  ValueReplacementAA.h
include/Utilities/: .FindUnderlyingObjects.h.swp  .PrintDebugInfo.h.swp  CastUtil.h  ControlSpecIterators.h  GepAndLoad.h  Lattice.h  LoopDominators.h  ModuleLoops.h  ReachabilityUtil.h
lib/: CMakeLists.txt
lib/AnalysisUtilities/: CMakeLists.txt  CaptureUtil.cpp  ComputeGEPOffset.cpp  ControlSpecIterators.cpp  ControlSpeculation.cpp  FindAllTransUses.cpp  FindUnderlyingObjects.cpp  GetSize.cpp  GlobalCtors.cpp  GlobalMalloc.cpp  InsertPrintf.cpp  InstInsertPt.cpp  IsVolatile.cpp  LiveValues.cpp  LoopDominators.cpp  ModuleLoops.cpp  PrintDebugInfo.cpp  SplitEdge.cpp  StaticID.cpp
lib/MemoryAnalysisModules/: AcyclicAA.cpp  AcyclicAA.h  AnalysisTimeout.cpp  ArrayOfStructures.cpp  AutoRestrictAA.cpp  BasicLoopAA.cpp  CMakeLists.txt  CallsiteBreadthCombinator.cpp  CallsiteDepthCombinator.cpp  CallsiteSearch.cpp  ClassicLoopAA.cpp  DisjointFieldAA.cpp  FieldMallocAA.cpp  FindSource.cpp  GetCallers.cpp  GlobalMallocAA.cpp  IntrinsicAA.cpp  Introspection.cpp  KillFlow.cpp  LLVMAAResults.cpp  LoopAA.cpp  LoopVariantAllocation.cpp  LoopVariantAllocation.h  NoCaptureFcn.cpp  NoCaptureGlobalAA.cpp  NoCaptureSrcAA.cpp  NoEscapeFieldsAA.cpp  NoEscapeFieldsAA.h  NoMemFun.h  OMPAA.cpp  PDGBuilder.cpp  PDGTester.cpp  PHIMazeAA.cpp  PureFun.h  PureFunAA.cpp  README.md  RefineCFG.cpp  RefineCFG.h  SCEVAA.cpp  SVFResults.cpp  (+9 more)
lib/SpeculationModules/: CMakeLists.txt  CallsiteDepthCombinator_CtrlSpecAware.cpp  CallsiteSearch_CtrlSpecAware.cpp  Classify.cpp  CommutativeLibsAA.cpp  ControlSpecRemed.cpp  ControlSpeculator.cpp  CountedIVRemed.cpp  EdgeCountOracleAA.cpp  FoldManager.cpp  KillFlow_CtrlSpecAware.cpp  LampOracleAA.cpp  LocalityAA.cpp  MemSpecAARemed.cpp  MemVerRemed.cpp  PDGBuilder.cpp  PointsToAA.cpp  PredictionSpeculation.cpp  PredictionSpeculator.cpp  PrivAA.cpp  ProfilePerformanceEstimator.cpp  PtrResidueAA.cpp  PtrResidueManager.cpp  README.md  Read.cpp  ReadOnlyAA.cpp  Reduction.cpp  ReduxRemed.cpp  Remediator.cpp  SLAMPLoad.cpp  ShortLivedAA.cpp  SlampOracleAA.cpp  SmtxAA.cpp  SmtxManager.cpp  TXIOAA.cpp
lib/Utilities/: .FindUnderlyingObjects.cpp.swn  .FindUnderlyingObjects.cpp.swo  .FindUnderlyingObjects.cpp.swp  .PrintDebugInfo.cpp.swp  AAQueries.cpp  AAvsOracle.cpp  AllocaHacks.cpp  CMakeLists.txt  CallBaseFactory.cpp  CallSiteFactory.cpp  CaptureUtil.cpp  CastUtil.cpp  ComputeGEPOffset.cpp  ControlSpecIterators.cpp  ControlSpeculation.cpp  FindAllTransUses.cpp  FindUnderlyingObjects.cpp  GepAndLoad.cpp  GepRange.cpp  GetMemOper.cpp  GetOrInsertCIV.cpp  GetSize.cpp  GimmeLoops.cpp  GlobalCtors.cpp  GlobalMalloc.cpp  InsertPrintf.cpp  InstInsertPt.cpp  IsVolatile.cpp  LiveValues.cpp  LoopDominators.cpp  ModuleLoops.cpp  Namer.cpp  PDGBuilder.cpp  PDGQueries.cpp  PrintDebugInfo.cpp  ReachabilityUtil.cpp  (+5 more)
scripts/: genPDG.sh
(+116 files in other folders)
